style.css
:root {
  --color: #c700e6;
  --txt: rgb(185, 185, 185);
}

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
  color: var(--txt);
}

.content {
  width: 100vw;
  height: 100vh;
}

.content,
.logo {
  display: flex;
  flex-flow: row wrap;
}

/* left side */

.picture {
  background-image: url(resources/bg_image.jpg);
  background-position: center;
  background-size: 60vw;
  background-repeat: no-repeat;
}

/*TODO: fix the gap on the right side */

.logo {
  height: auto;
  background-color: rgba(0, 0, 0, 0.7);
  position: relative;
  top: 20vh;
  gap: 1vw;
  padding: 15px;
  justify-content: center;
  align-items: center;
}

h1 {
  color: white;
}

.odin {
  height: 10vh;
  padding: 2px;
}

/* right side */

.right {
  width: 60vw;
  background-color: #000000;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  padding-top: 10px;
}

.left {
  padding-left: 3vw;
}

.dummy-text {
  font-weight: 500;
  width: 90%;
  font-size: 1.2rem;
}

.remote-text {
  margin: 40px 0 80px;
}

/* form */

.form {
  background-color: rgb(6, 6, 6);
  box-shadow: 0 10px 20px -2px rgb(22, 22, 22);
  display: flex;
  flex-flow: row wrap;
  gap: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
}

.input {
  display: flex;
  flex-flow: column wrap;
  width: 40%;
  font-size: 0.7rem;
  text-transform: uppercase;
  opacity: 50%;
}

.form-title {
  width: 100%;
  font-size: 1.2rem;
  font-weight: 500;
}

input {
  background-color: rgb(2, 2, 2);
  border: 1px solid rgb(77, 77, 77);
  border-radius: 3px;
}

input:focus {
  outline: none;
  border: 2px solid var(--color);
}

button {
  background-color: rgba(0, 0, 0, 0);
  color: var(--color);
  font-weight: 700;
  font-size: 1.2em;
  border: 2px solid var(--color);
  border-radius: 5px;
  padding: 10px 40px;
  margin: 40px 0;
}

button:hover {
  background-color: var(--color);
  color: black;
}

.log-in {
  display: flex;
  gap: 5px;
}

a {
  text-decoration: none;
  color: var(--color);
  font-weight: 700;
}

a:hover {
  color: white;
}

@media only screen and (max-width: 600px) {
  .content {
    flex-flow: column;
    height: auto;
    text-align: center;
  }
  .picture {
    width: 100vw;
    height: 15vh;
    display: flex;
    background-size: 100vw;
  }
  .logo {
    width: 100vw;
    position: static;
    gap: 10px;
  }
  .right {
    width: auto;
    height: auto;
  }
  .dummy-text {
    width: auto;
    margin-top: 30px;
  }
  .left {
    padding: 10px 20px;
  }
  .remote-text {
    padding: 20px 0;
    margin: 0;
  }
  .form {
    flex-flow: column nowrap;
    align-items: center;
  }
  .input {
    text-align: left;
    width: auto;
    font-size: 0.9em;
    justify-content: center;
    align-items: center;
  }
  input {
    font-size: 0.9rem;
    height: 1.5rem;
    width: 70vw;
  }
  .button,
  .log-in {
    display: flex;
    justify-content: center;
    margin-bottom: 0px;
  }
  button {
    margin-bottom: 0px;
    width: 60vw;
    padding: 10px 5px;
  }
}

